--- a/testbeds/vmware/vars/kubernetes/networking.yml
+++ b/testbeds/vmware/vars/kubernetes/networking.yml
@@ -1,13 +1,7 @@
 ---
 
-master:
-  prme_id: 1
-  vm_id: 120
-
-nodes:
+networking:
   prme1-k8s-node-120:
-    type: "master:minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 121
@@ -34,8 +28,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme1-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -62,8 +54,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme1-k8s-node-122:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -90,8 +80,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme2-k8s-node-120:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -118,8 +106,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme2-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -146,8 +132,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme3-k8s-node-120:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -174,8 +158,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme3-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -202,8 +184,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme7-k8s-node-120:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -230,8 +210,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme7-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -258,8 +236,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme8-k8s-node-120:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -286,8 +262,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme8-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -314,8 +288,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme9-k8s-node-120:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -342,8 +314,6 @@ nodes:
       - prme_id: 9
         vm_id: 121
   prme9-k8s-node-121:
-    type: "minion"
-    master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
@@ -369,17 +339,3 @@ nodes:
         vm_id: 121
       - prme_id: 9
         vm_id: 120
-
-apps:
-#  - name: kubernetes-dashboard
-#    namespace: kube-system
-#    policy: rr
-  - name: hello-world
-    namespace: default
-    policy: rr
-#  - name: httperf-clients
-#    namespace: default
-#    policy: rr
-#  - name: apache-servers
-#    namespace: default
-#    policy: wrr
