--- a/testbeds/vmware/roles/proxmox/tasks/overlay/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/overlay/create.yml
@@ -22,7 +22,7 @@
 
 - name: create {{ proxmox_overlay_tunnel_type }} tunnels for each endpoint using br0
   include: roles/proxmox/tasks/overlay/add_tunnel.yml remote_node="{{ item }}"
-  with_items: "{{ nodes[inventory_hostname]['remote_nodes'] }}"
+  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
 
 - name: add static route for overlay traffic
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
