--- a/testbeds/vmware/roles/kubernetes/defaults/main.yml
+++ b/testbeds/vmware/roles/kubernetes/defaults/main.yml
@@ -1,5 +1,10 @@
 ---
 
+docker_apt_key_id: "58118E89F3A912897C070ADBF76221572C52609D"
+docker_apt_keyserver: "hkp://pgp.mit.edu:80"
+docker_apt_repo: "deb https://apt.dockerproject.org/repo ubuntu-trusty main"
+docker_compose_url: "https://github.com/docker/compose/releases/download/1.5.2/docker-compose-Linux-x86_64"
+
 etcd_version: 3.0.17
 k8s_version: 1.6.6
 
