--- a/testbeds/vmware/roles/kubernetes/tasks/main.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/main.yml
@@ -1,11 +1,19 @@
 ---
 
+- name: install common utilities
+  include: roles/kubernetes/tasks/common/install.yml
+  tags: install_common
+
+- name: remove common utilities
+  include: roles/kubernetes/tasks/common/remove.yml
+  tags: remove_common
+
 - name: create overlay network
-  include: roles/kubernetes/tasks/overlay/create.yml
+  include: roles/kubernetes/tasks/networking/overlay/create.yml
   tags: create_overlay
 
 - name: destroy overlay network
-  include: roles/kubernetes/tasks/overlay/destroy.yml
+  include: roles/kubernetes/tasks/networking/overlay/destroy.yml
   tags: destroy_overlay
 
 - name: create k8s cluster
