--- a/testbeds/vmware/roles/proxmox/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/main.yml
@@ -2,11 +2,11 @@
 
 - name: add VM template
   include: roles/proxmox/tasks/vms/template/add.yml
-  tags: add_vms_template
+  tags: add_template
 
 - name: remove VM template
   include: roles/proxmox/tasks/vms/template/remove.yml
-  tags: remove_vms_template
+  tags: remove_template
 
 - name: create overlay network
   include: roles/proxmox/tasks/networking/overlay/create.yml
