--- a/testbeds/vmware/roles/baseerat/tasks/main.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/main.yml
@@ -2,8 +2,8 @@
 
 - name: setup baseerat
   include: roles/baseerat/tasks/setup.yml
-  tags: setup_baseerat
+  tags: setup
 
 - name: cleanup baseerat
   include: roles/baseerat/tasks/cleanup.yml
-  tags: cleanup_baseerat
+  tags: cleanup
