--- a/testbeds/vmware/proxmox_tor.yml
+++ b/testbeds/vmware/proxmox_tor.yml
@@ -2,7 +2,11 @@
 
 - name: provision tor network
   hosts:  prme-nsx-perf-004
+         ,prme-nsx-perf-006
   gather_facts: true
+
+  vars_files:
+    - "vars/proxmox_tor/main.yml"
 
   roles:
     - proxmox_tor
