--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/cleanup.yml
@@ -1,9 +1,13 @@
 ---
 
+- name: cleanup pisces
+  include: roles/proxmox_tor/tasks/networking/switches/pisces/cleanup.yml
+  when: 'tor_switch.type == "pisces"'
+
 - name: cleanup ovs (kernel)
   include: roles/proxmox_tor/tasks/networking/switches/ovs_kernel/cleanup.yml
-  when: 'tor_switch_type == "ovs_kernel"'
+  when: 'tor_switch.type == "ovs_kernel"'
 
 - name: cleanup linux bridge
   include: roles/proxmox_tor/tasks/networking/switches/linux_bridge/cleanup.yml
-  when: 'tor_switch_type == "linux_bridge"'
+  when: 'tor_switch.type == "linux_bridge"'
