--- a/testbeds/vmware/inventory.ini
+++ b/testbeds/vmware/inventory.ini
@@ -2,6 +2,9 @@
 prme-nsx-perf-001
 prme-nsx-perf-002
 prme-nsx-perf-003
+prme-nsx-perf-004
+prme-nsx-perf-005
+prme-nsx-perf-006
 prme-nsx-perf-007
 prme-nsx-perf-008
 prme-nsx-perf-009
