--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: install essentials
-  include: roles/proxmox_tor/tasks/networking/switches/pisces/essentials.yml
+#- name: install essentials ***DO NOT UNCOMMENT***
+#  include: roles/proxmox_tor/tasks/networking/switches/pisces/essentials.yml
 
 - name: get p4-hlir source code
   unarchive:
