--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
@@ -1,99 +1,17 @@
 ---
 
-#- name: install essentials ***DO NOT UNCOMMENT***
-#  include: roles/proxmox_tor/tasks/networking/switches/pisces/essentials.yml
-
-- name: get p4-hlir source code
-  unarchive:
-    src: https://github.com/Baseerat/p4-hlir/archive/master.zip
-    dest: /tmp
-    remote_src: True
-
-- name: install p4-hlir module
-  shell: cd /tmp/p4-hlir-master; python setup.py install; cd /root
-
-- name: get p4c-behavioral source code
-  unarchive:
-    src: https://github.com/Baseerat/p4c-behavioral/archive/Baseerat.zip
-    dest: /tmp
-    remote_src: True
-
-- name: install p4c-behavioral module
-  shell: cd /tmp/p4c-behavioral-Baseerat; python setup.py install; cd /root
-
-- name: clone ovs source code
-  git:
-    repo: https://github.com/Baseerat/ovs.git
-    dest: /root/ovs
-    version: Baseerat
-
-- name: initialize ovs submodules
-  shell: cd /root/ovs; git submodule update --init; cd /root
-
-- name: patch and build dpdk
-  shell: cd /root/ovs/deps/dpdk;
-         patch -p1 -N < ../../setup-scripts/patches/dpdk.patch;
-         make -j 8 install T=x86_64-native-linuxapp-gcc;
+- name: create an ovs bridge br0
+  shell: cd /root/ovs/utilities;
+         ./ovs-vsctl add-br br0 -- set bridge br0 datapath_type=netdev;
+         ./ovs-vsctl set bridge br0 protocols=OpenFlow15;
          cd /root
 
-- name: set dpdk rte variables
-  set_fact:
-    RTE_SDK: /root/ovs/deps/dpdk
-    RTE_TARGET: x86_64-native-linuxapp-gcc
+- name: bring up br0
+  shell: ip link set dev br0 up
 
-- name: copy p4 program
-  copy:
-    src: "{{ switches.pisces.p4_programs.base_dir }}/p4_programs/{{ tor_switch.pisces.p4_program }}"
-    dest: /root/ovs/include/p4/examples/{{ tor_switch.pisces.p4_program }}
-
-- name: build ovs
-  shell: cd /root/ovs;
-         export RTE_SDK={{ RTE_SDK }};
-         export RTE_TARGET={{ RTE_TARGET }};
-         export DPDK_DIR=$RTE_SDK;
-         export DPDK_BUILD=$RTE_SDK/$RTE_TARGET;
-         ./boot.sh;
-         ./configure --with-dpdk=$DPDK_BUILD CFLAGS="{{ switches.pisces.debug }} -O2 -Wno-cast-align" \
-                     p4inputfile=./include/p4/examples/{{ tor_switch.pisces.p4_program }} \
-                     p4outputdir=./include/p4/src;
-         make clean;
-         make -j 8;
+- name: add interfaces to br0
+  shell: cd /root/ovs/utilities;
+         ./ovs-vsctl add-port br0 dpdk{{ item }} -- set Interface dpdk{{ item }} type=dpdk;
          cd /root
+  with_sequence: start=0 end={{ nodes[inventory_hostname]['interfaces'] | length - 1 }} format=%d
 
-- name: configure huge page tables
-  script: roles/proxmox_tor/files/hugetlbfs.sh 512
-
-- name: modprobe uio
-  modprobe:
-    name: uio
-    state: present
-
-- name: install igb_uio module
-  shell: insmod {{ RTE_SDK }}/{{ RTE_TARGET }}/kmod/igb_uio.ko
-
-- name: install rte_kni module
-  shell: insmod {{ RTE_SDK }}/{{ RTE_TARGET }}/kmod/rte_kni.ko "lo_mode=lo_mode_ring"
-
-- name: add interfaces to dpdk
-  shell: ip link set dev {{ item }} down;
-         {{ RTE_SDK }}/tools/dpdk_nic_bind.py -b igb_uio {{ item }}
-  with_items: "{{ nodes[inventory_hostname]['interfaces'] }}"
-
-- name: set directory variables
-  set_fact:
-    OVS_LOCAL_ETC_DIR: /usr/local/etc/openvswitch
-    OVS_VAR_RUN_DIR: /usr/local/var/run/openvswitch
-
-- name: ensure {{ OVS_LOCAL_ETC_DIR }} directory is present
-  file:
-    path: "{{ OVS_LOCAL_ETC_DIR }}"
-    state: directory
-
-- name: ensure {{ OVS_VAR_RUN_DIR }} directory is present
-  file:
-    path: "{{ OVS_VAR_RUN_DIR }}"
-    state: directory
-
-- name: initialize ovsdb
-  shell: cd /root/ovs/ovsdb;
-         ./ovsdb-tool create {{ OVS_LOCAL_ETC_DIR }}/conf.db ../vswitchd/vswitch.ovsschema
