--- a/testbeds/vmware/vars/proxmox_tor/main.yml
+++ b/testbeds/vmware/vars/proxmox_tor/main.yml
@@ -3,4 +3,5 @@
 tor_switch:
   type: "pisces" # Options: linux_bridge, ovs_kernel, ovs_dpdk, pisces
   pisces:
-    p4_program: "l2_switch.p4"
+    p4_program: "simple_router.p4"
+    huge_pages: false # should be kept false (only set to true once at system bootup)
