--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
@@ -26,3 +26,7 @@
 
 - name: add static route for overlay traffic
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
+
+- name: add static arp entries
+  shell: arp -s {{ item.address }} {{ mac_addresses[item.address] }}
+  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
