--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/destroy.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/destroy.yml
@@ -11,6 +11,10 @@
     bridge: br0
     state: absent
 
+- name: remove static arp entries
+  shell: arp -d {{ item.address }}
+  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
+
 - name: remove static route for overlay traffic
   shell: ip route del {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
 
