--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/cleanup.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: delete flow rules
+  shell: cd /root/ovs/utilities;
+         ./ovs-ofctl --protocols=OpenFlow15 del-flows br0;
+         cd /root
+
 - name: remove interfaces from br0
   shell: cd /root/ovs/utilities;
          ./ovs-vsctl del-port br0 dpdk{{ item }};
