--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
@@ -14,3 +14,14 @@
          ./ovs-vsctl add-port br0 dpdk{{ item }} -- set Interface dpdk{{ item }} type=dpdk;
          cd /root
   with_sequence: start=0 end={{ nodes[inventory_hostname]['interfaces'] | length - 1 }} format=%d
+
+- name: delete existing flow rules
+  shell: cd /root/ovs/utilities;
+         ./ovs-ofctl --protocols=OpenFlow15 del-flows br0;
+         cd /root
+
+- name: add flow rules
+  shell: cd /root/ovs/utilities;
+         ./ovs-ofctl --protocols=OpenFlow15 add-flow br0 '{{ item }}';
+         cd /root
+  with_items: "{{ tor_switch.pisces.flow_rules[inventory_hostname] }}"
