--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,5 @@ ENV/
 apps/vmware/ssh_config
 apps/vmware/ansible.cfg
 apps/vmware/inventory.ini
-apps/vmware/vars/kubernetes.yml
-apps/vmware/vars/kubernetes.defaults.yml
+apps/vmware/vars/kubernetes/
 apps/vmware/keys
