--- a/testbeds/vmware/proxmox.yml
+++ b/testbeds/vmware/proxmox.yml
@@ -5,9 +5,9 @@
           prme-nsx-perf-001
          ,prme-nsx-perf-002
          ,prme-nsx-perf-003
-         ,prme-nsx-perf-007
-         ,prme-nsx-perf-008
-         ,prme-nsx-perf-009
+#         ,prme-nsx-perf-007
+#         ,prme-nsx-perf-008
+#         ,prme-nsx-perf-009
   gather_facts: true
 
   vars_files:
