--- a/testbeds/vmware/proxmox_tor.yml
+++ b/testbeds/vmware/proxmox_tor.yml
@@ -1,8 +1,9 @@
 ---
 
 - name: provision tor network
-  hosts:  prme-nsx-perf-004
-         ,prme-nsx-perf-006
+  hosts:
+         prme-nsx-perf-004
+#        ,prme-nsx-perf-006
   gather_facts: true
 
   vars_files:
