--- a/testbeds/vmware/vars/proxmox/networking/tor_network.yml
+++ b/testbeds/vmware/vars/proxmox/networking/tor_network.yml
@@ -1,6 +1,6 @@
 ---
 
-mac_addresses:
+hardware_addresses:
   172.16.140.158: 00:25:90:96:60:2a
   172.16.140.159: 00:25:90:96:60:4a
   172.16.140.160: 00:25:90:96:64:c2
