--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
@@ -28,5 +28,5 @@
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
 
 - name: add static arp entries
-  shell: arp -s {{ item.address }} {{ mac_addresses[item.address] }}
+  shell: arp -s {{ item.address }} {{ hardware_addresses[item.address] }}
   with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
