--- a/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
@@ -5,3 +5,6 @@
 
 - name: delete dummy interface group0
   shell: ip link del dev group0
+
+- name: delete flow rule for intercepting baseerat packets at br0
+  shell: ovs-ofctl del-flows br0 "udp,nw_dst={{ baseerat_address }},tp_dst={{ baseerat_port }}"
