--- a/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
@@ -11,9 +11,9 @@
 
 - name: add interfaces to br0
   shell: cd /root/ovs/utilities;
-         ./ovs-vsctl add-port br0 dpdk{{ item }} -- set Interface dpdk{{ item }} type=dpdk;
+         ./ovs-vsctl add-port br0 dpdk{{ item }} -- set interface dpdk{{ item }} type=dpdk;
          cd /root
-  with_sequence: start=0 end={{ nodes[inventory_hostname]['interfaces'] | length - 1 }} format=%d
+  with_sequence: start=0 end={{ nodes[inventory_hostname]['interfaces']|length - 1 }} format=%d
 
 - name: delete existing flow rules
   shell: cd /root/ovs/utilities;
