adding iface info for machines 4,5,6

--- a/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
@@ -6,7 +6,9 @@ nodes:
       - eth2 # prme-nsx-perf-001
       - eth5 # prme-nsx-perf-002
       - eth8 # prme-nsx-perf-003
-      - eth9 # prme-nsx-perf-005:eth6
+      - eth6 # prme-nsx-perf-005:eth5
+      - eth7 # prme-nsx-perf-005:eth8
+      - eth9 # prme-nsx-perf-005:eth2
     options:
       eth2:
         pci_id: "0000:41:00.0"
@@ -17,28 +19,42 @@ nodes:
       eth8:
         pci_id: "0000:44:00.0"
         if_index: 3
+#      eth6:
+#        pci_id: "0000:43:00.0"
+#        if_index: -
+#      eth7:
+#        pci_id: "0000:43:00.1"
+#        if_index: -
       eth9:
-        pci_id: "0000:03:00.1"
+        pci_id: "0000:44:00.1"
         if_index: 4
   prme-nsx-perf-006:
     interfaces:
-      - eth8 # prme-nsx-perf-007
       - eth1 # prme-nsx-perf-008
       - eth4 # prme-nsx-perf-009
-      - eth6 # prme-nsx-perf-005:eth7
+      - eth8 # prme-nsx-perf-007
+      - eth6 # prme-nsx-perf-005:eth9
+      - eth7 # prme-nsx-perf-005:eth6
+      - eth9 # prme-nsx-perf-005:eth7
     options:
-      eth8:
-        pci_id: "0000:42:00.0"
-        if_index: 4 # NOTE: for some reason this is assigned in the order of eth ids (e.g., eth8=3, eth1=1, and eth4=2).
       eth1:
         pci_id: "0000:04:00.0"
-        if_index: 1
+        if_index: 1 # NOTE: for some reason this is assigned in the order of eth ids (e.g., eth8=3, eth1=1, and eth4=2).
       eth4:
         pci_id: "0000:04:00.1"
         if_index: 2
+      eth8:
+        pci_id: "0000:42:00.0"
+        if_index: 4
       eth6:
         pci_id: "0000:41:00.0"
         if_index: 3
+#      eth7:
+#        pci_id: "0000:41:00.1"
+#        if_index: -
+#      eth9:
+#        pci_id: "0000:42:00.1"
+#        if_index: -
 
 switches:
   pisces:
