--- a/testbeds/vmware/roles/proxmox_dc/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_dc/defaults/main.yml
@@ -32,5 +32,5 @@ nodes:
 switches:
   ovs_dpdk:
     debug: '' # Options: -g or ''
-    cpu_mask: '0xFFFE'
+    cpu_mask: '0xFFF0'
     memory_channels: 4
