--- a/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
@@ -59,7 +59,11 @@ nodes:
 switches:
   pisces:
     debug: '' # Options: -g or ''
-    cpu_mask: '0xFFFE'
+    cpu_mask: '0xFFF0'
     memory_channels: 4
     p4_programs:
       base_dir: files
+  ovs_dpdk:
+    debug: '' # Options: -g or ''
+    cpu_mask: '0xFFF0'
+    memory_channels: 4
