--- a/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_tor/defaults/main.yml
@@ -58,12 +58,12 @@ nodes:
 
 switches:
   pisces:
-    debug: '' # Options: -g or ''
+    cflags: '-O2 -Wno-cast-align'
     cpu_mask: '0xFFF0'
     memory_channels: 4
     p4_programs:
       base_dir: files
   ovs_dpdk:
-    debug: '' # Options: -g or ''
+    cflags: '-O2 -Wno-cast-align' # Options: -g or ''
     cpu_mask: '0xFFF0'
     memory_channels: 4
