--- a/testbeds/vmware/vars/proxmox_tor/main.yml
+++ b/testbeds/vmware/vars/proxmox_tor/main.yml
@@ -1,7 +1,7 @@
 ---
 
 tor_switch:
-  type: "ovs_dpdk" # Options: linux_bridge, ovs_kernel, ovs_dpdk, pisces
+  type: "linux_bridge" # Options: linux_bridge, ovs_kernel, ovs_dpdk, pisces
   pisces:
     p4_program: "baseerat.p4"
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
