--- a/testbeds/vmware/roles/proxmox_dc/defaults/main.yml
+++ b/testbeds/vmware/roles/proxmox_dc/defaults/main.yml
@@ -31,6 +31,6 @@ nodes:
 
 switches:
   ovs_dpdk:
-    cflags: '-O2 -Wno-cast-align' # Options: -g or ''
+    cflags: '-Ofast -march=native -Wno-cast-align' # Options: -g or ''
     cpu_mask: '0xFFF0'
     memory_channels: 4
