--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/create.yml
@@ -27,9 +27,5 @@
 - name: add static route for overlay traffic
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
 
-- name: add static arp entries
-  shell: arp -s {{ item.address }} {{ hardware_addresses[item.address] }}
-  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
-
-- name: add iptables rule to filter traffic coming from eth0 belonging to overlay subnet
+- name: add iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
   shell: iptables -I INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
