--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/destroy.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/destroy.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: remove iptables rule to filter traffic coming from eth0 belonging to overlay subnet
+- name: remove iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
   shell: iptables -D INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
 
 - name: delete {{ proxmox_overlay_tunnel_type }} tunnels for each endpoint using br0
@@ -17,10 +17,6 @@
   openvswitch_bridge:
     bridge: br0
     state: absent
-
-- name: remove static arp entries
-  shell: arp -d {{ item.address }}
-  with_items: "{{ networking[inventory_hostname]['remote_nodes'] }}"
 
 - name: remove static route for overlay traffic
   shell: ip route del {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
