--- a/testbeds/vmware/vars/proxmox_tor/main.yml
+++ b/testbeds/vmware/vars/proxmox_tor/main.yml
@@ -1,7 +1,7 @@
 ---
 
 tor_switch:
-  type: "linux_bridge" # Options: linux_bridge, ovs_kernel, ovs_dpdk, pisces
+  type: "ovs_dpdk" # Options: linux_bridge, ovs_kernel, ovs_dpdk, pisces
   pisces:
     p4_program: "baseerat.p4"
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
@@ -22,6 +22,13 @@ tor_switch:
   ovs_dpdk:
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
       prme-nsx-perf-004:
+        - "table=0,priority=10,arp,nw_dst=172.16.140.158 actions=1" # to prme-nsx-perf-001
+        - "table=0,priority=10,arp,nw_dst=172.16.140.159 actions=2" # to prme-nsx-perf-002
+        - "table=0,priority=10,arp,nw_dst=172.16.140.160 actions=3" # to prme-nsx-perf-003
+        - "table=0,priority=10,arp,nw_dst=172.16.140.96 actions=4" # to prme-nsx-perf-007 via prme-nsx-perf-005
+        - "table=0,priority=10,arp,nw_dst=172.16.140.97 actions=4" # to prme-nsx-perf-008 via prme-nsx-perf-005
+        - "table=0,priority=10,arp,nw_dst=172.16.140.98 actions=4" # to prme-nsx-perf-009 via prme-nsx-perf-005
+
         - "table=0,priority=10,ip,nw_dst=172.16.140.158 actions=1" # to prme-nsx-perf-001
         - "table=0,priority=10,ip,nw_dst=172.16.140.159 actions=2" # to prme-nsx-perf-002
         - "table=0,priority=10,ip,nw_dst=172.16.140.160 actions=3" # to prme-nsx-perf-003
@@ -29,6 +36,13 @@ tor_switch:
         - "table=0,priority=10,ip,nw_dst=172.16.140.97 actions=4" # to prme-nsx-perf-008 via prme-nsx-perf-005
         - "table=0,priority=10,ip,nw_dst=172.16.140.98 actions=4" # to prme-nsx-perf-009 via prme-nsx-perf-005
       prme-nsx-perf-006:
+        - "table=0,priority=10,arp,nw_dst=172.16.140.96 actions=4" # to prme-nsx-perf-007
+        - "table=0,priority=10,arp,nw_dst=172.16.140.97 actions=1" # to prme-nsx-perf-008
+        - "table=0,priority=10,arp,nw_dst=172.16.140.98 actions=2" # to prme-nsx-perf-009
+        - "table=0,priority=10,arp,nw_dst=172.16.140.158 actions=3" # to prme-nsx-perf-001 via prme-nsx-perf-005
+        - "table=0,priority=10,arp,nw_dst=172.16.140.159 actions=3" # to prme-nsx-perf-002 via prme-nsx-perf-005
+        - "table=0,priority=10,arp,nw_dst=172.16.140.160 actions=3" # to prme-nsx-perf-003 via prme-nsx-perf-005
+
         - "table=0,priority=10,ip,nw_dst=172.16.140.96 actions=4" # to prme-nsx-perf-007
         - "table=0,priority=10,ip,nw_dst=172.16.140.97 actions=1" # to prme-nsx-perf-008
         - "table=0,priority=10,ip,nw_dst=172.16.140.98 actions=2" # to prme-nsx-perf-009
